0.168.0
  - MR creation honors orev now (bsc#1160446)
  - allow "osc r --vertical" for projects

0.167.2
  - fix regression in osc chroot
  - fix broken importsrcpkg

0.167.1
  - fix cpio fetch error handling
  - support local build using RedHat rpm-md modules
  - fix local build outside of the working copy of a package.
    (fixes boo#1136584)
  - Use the distro module for linux platform detection

0.167.0
  - Added --lastsucceeded option for logfile display (requires OBS 2.11)
  - osc shell/chroot/wipe is now handled via build script (working for chroot and KVM only atm)
  - osc build/shell features:
    * --vm-type=qemu support for cross architecture builds
    * additional debug packages are read from build config now
      (extra-pkgs definition is therefore by default empty now)
    * --vm-disk-size=  switch supported (has only an effect on clean builds)
    * repository, architecture and vm_type from last build is automatically
      reused if not specified otherwise.
    * support building for kiwi products using obsrepositories:/
    * support local building using RedHat rpm-md modules
  - fix decoding for osc aggregatepac

0.166.2
  - Don't enforce password reuse (boo#1156501)
  - Config option check_for_requests_on_action is now
    activated by default.
    Use check_for_request_on_action = 0 in oscrc to
    disable it
  - osc vc --file=foo bar.changes now writes the content
    from foo into bar.changes instead of creating a new file
    (boo#1155953)
  - fix output for missing pubkey when using http_debug=1 on
    osc build
  - fix crash of osc linkpac when there is already a _link

0.166.1
  - emergency fix for credentials handling:
      * in case of an old passx entry in oscrc
	osc did not work at all. Now we check in
	the compat code if we have an passx entry.

0.166.0
  - New password handling backend. Supported password stores:
      * Plaintext password
      * Obfuscated password
      * python-keyring (kwallet, secret store)