@@ -1,6 +1,7 @@
 0.168.0
   - MR creation honors orev now (bsc#1160446)
   - allow "osc r --vertical" for projects
+  - support request diffing relative to a former request
 
 0.167.2
   - fix regression in osc chroot
